fixed dark mode state

--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,7 @@ body {
 }
 
 .countrypage-data {
-  margin: 20px 100px;
+  margin: 20px 0px 20px 100px;
 }
 
 .countrypage-info{
@@ -210,6 +210,22 @@ body {
 .countrypage-links{
   margin-top: 40px;
   font-size:0.8rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+.countrypage-links h5 {
+  margin: 0;
+}
+
+.countrypage-links button {
+  margin: 0 2px;
+  padding: 5px 10px; 
+  background-color: var(--elements-background);
+  border-radius: 2px;
+  color: var(--body-text);
+  box-shadow: 0px 0px 5px -1px hsl(0, 0%, 52%);
 }
 
 .bold {
